@startuml Strategy_diagram

class Context {
    + executeStrategy()
}

interface IStrategy {
    + {abstract} execute()
}

Context *--> IStrategy
note left on link
Using composition
(also possible using as dependency)
end note

class ConcreteStrategyA {
    + execute()
}

IStrategy <|.. ConcreteStrategyA

class ConcreteStrategyB {
    + execute()
}

IStrategy <|.. ConcreteStrategyB

@enduml
